# TED2

./: main.cpp
TrabalhoED2/: CMakeLists.txt  TrabalhoED2.cpp  TrabalhoED2.h  main.cpp  ordenacao.h
